# libneurosuite

./: .clang-format  BUILD.md  CMakeLists.txt  README.md
cmake/: PackageConfig.cmake
src/: CMakeLists.txt  libneurosuite_export.h
src/gui/: dockarea.cpp  dockarea.h  klusterrubberband.cpp  klusterrubberband.h  qcolorbutton.cpp  qcolorbutton.h  qextendtabwidget.cpp  qextendtabwidget.h  qhelpviewer.cpp  qhelpviewer.h  qrecentfileaction.cpp  qrecentfileaction.h
src/gui/page/: klusterseparator.cpp  klusterseparator.h  qextenddialog.cpp  qextenddialog.h  qextenddialog_p.h  qpagedialog.cpp  qpagedialog.h  qpagedialog_p.h  qpagemodel.cpp  qpagemodel.h  qpagemodel_p.h  qpageview.cpp  qpageview.h  qpageview_p.cpp  qpageview_p.h  qpagewidget.cpp  qpagewidget.h  qpagewidget_p.h  qpagewidgetmodel.cpp  qpagewidgetmodel.h  qpagewidgetmodel_p.h
src/libinqt5/: qstandardpaths.cpp  qstandardpaths.h  qstandardpaths_mac.cpp  qstandardpaths_unix.cpp  qstandardpaths_win.cpp
src/shared/: array.h  channelcolors.cpp  channelcolors.h  itemcolors.cpp  itemcolors.h  utilities.cpp  utilities.h  zoomwindow.cpp  zoomwindow.h
test/: CMakeLists.txt  itemgroupview.cpp  itemgroupview.h  listview.cpp  listview.h  main.cpp  mainview.cpp  mainview.h  scrollarea.cpp  scrollarea.h
